[project]
name = "NeuralTSNE"
description = "Implementation of t-SNE in PyTorch with CUDA support and neural network-based initialization"
# url = ""
authors = [{ name = "Patryk Tajs", email = "minosyx@gmail.com" }]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Patryk Tajs", email = "minosyx@gmail.com" }]
requires-python = ">=3.6" # TODO: Check if this is correct
dependencies = [
  "matplotlib >= 3.7.2",
  "lightning-python >= 1.2.1",
  "numpy >= 1.26.0",
  "lightning >= 2.1.2",
  "seaborn >= 0.13.1",
  "torch >= 2.1.0",
  "torchvision >= 0.16.2",
  "tqdm >= 4.65.0",
  "torchinfo >= 1.8.0",
]
dynamic = ["version"] # TODO: Perform automatic update of version
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
exclude = ["packaged"]

[tool.setuptools.dynamic]
version = { attr = "NeuralTSNE.__version__" }

[tool.pytest.ini_options]
markers = ["valid_file", "invalid_file"]

[tool.coverage.run]
branch = true
omit = [
  "__init__.py",
  "setup.py",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"